# crs-summaries

./: .gitignore  README.md  crs_summaries.csv  crs_summaries.docx  crs_summaries.xlsx  crs_summaries_2025-09-09.docx  crs_summary_extractor.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_single_break.docx
tests/: __init__.py  test_crs_extractor.py
